# BlackjackSolver

./: Cargo.toml  README.md
doc/: .$structure.drawio.bkp  .$structure.drawio.dtmp  structure.drawio
src/: card.rs  config.rs  lib.rs  table.rs  value.rs
src/client/: mod.rs  systems.rs  test.rs
src/client/game/: components.rs  events.rs  mod.rs  resources.rs  states.rs  styles.rs
src/client/game/buttons/: components.rs  mod.rs  systems.rs
src/client/game/card/: components.rs  mod.rs  systems.rs
src/client/game/chip/: components.rs  mod.rs  systems.rs
src/client/game/dealer/: mod.rs  resources.rs  systems.rs
src/client/game/events/: client_events.rs  mod.rs  player_request_events.rs  server_response_events.rs
src/client/game/player/: components.rs  mod.rs  resources.rs  systems.rs
src/client/game/systems/: event_handler.rs  interactions.rs  keyboard.rs  layout.rs  mod.rs  systems.rs
src/client/main_menu/: components.rs  mod.rs  styles.rs
src/deck/: mod.rs  random_deck.rs
src/hand/: dealer_hand.rs  hand.rs  player_hand.rs
src/player/: SUiPlayer.rs  StaticStrategyPlayer.rs  mod.rs
src/server/: card.rs  config.rs  mod.rs  rule.rs  table.rs  value.rs
src/server/deck/: diy_deck.rs  mod.rs  queue_deck.rs  random_deck.rs
src/server/hand/: dealer_hand.rs  hand.rs  mod.rs  player_hand.rs
src/server/player/: StaticStrategyPlayer.rs  mod.rs  static_strategy_player.rs
src/server/solver/: mod.rs
src/server/tests/: mod.rs  table_tests.rs
src/solver/static_solver/: mod.rs
src/solver/strategy_analyzer/: mod.rs
(+23 files in other folders)
