[package]
name = "BlackjackSolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8.1"

# Log
log = "0.4"

# Others
dotenv = "0.15.0"
strum = "0.26"
strum_macros = "0.26"
rand = "0.8.4"
fraction = "0.15.3"